--- a/css/style.css
+++ b/css/style.css
@@ -78,7 +78,7 @@ hr {
 	font-family: 'Raleway', sans-serif;
 	font-size: 18px;
 	font-weight: 700;
-	color: #333;
+	color: #add8e6;<!-- #333 -->
 	text-transform: uppercase;
 }
 #menu.navbar-default .navbar-nav > li > a {
@@ -187,10 +187,10 @@ a:focus, .btn:focus, .btn:active:focus, .btn.active:focus, .btn.focus, .btn:acti
 	width: 100%;
 	padding: 0;
 	background: url(../img/intro-bg.jpg) center center no-repeat;
-	background-color: #e5e5e5;
+	background-color: transparent;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
-	background-size: cover;
+	background-size: contain;
 	-o-background-size: cover;
 }
 .intro .overlay {
