--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,11 @@
+#DivImagens img{
+    width: 350px;
+    height: 300px;
+    float: left;
+    left: 70px;
+    top: 90px; 
+}
+
 body, html {
 	font-family: 'Open Sans', sans-serif;
 	text-rendering: optimizeLegibility !important;
